--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Daneshjooyar App</string>
     <string name="img">img</string>
+    <string name="_09">09*********</string>
 </resources>
