--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,25 @@
     <string name="app_name">Daneshjooyar App</string>
     <string name="img">img</string>
     <string name="_09">09*********</string>
+    <string name="txt_rules">
+        "نکته مهم :\n\n"
+        دانشجویار برای ارائه خدمات بهتر، همواره قادر به ایجاد تغییرات در صفحه قوانین میباشد. پس کاربران حداکثر تا ۱۰
+        روز پس از تاریخ آخرین به‌روزرسانی، بایستی مجددا مفاد این صفحه را مطالعه کرده
+        و از تغییرات اعمال شده کاملا آگاه شوند. پس هر تغییری که
+        در این قوانین اعمال شود، پس از گذشت ۱۰ روز از تاریخ ایجاد،
+        قابل اجرا و پیگیری خواهد بود."
+
+"صفحه پیش رو حکم یک توافق و قرارداد میان دانشجویار و کاربر
+        استفاده کنندهرا خواهد داشت. پس هر شخصی که به هر نحوی از خدمات و محصولات دانشجویار
+        استفاده میکند، ملزم به اجرا و رعایت این قوانین میباشد. لازم به ذکر است که
+        دانشجویار تابع قوانین جمهوری اسلامی ایران میباشد."
+
+"شرایط استفاده از محصولات:\n\n"
+"ثبت نام در دانشجویار و شرکت در یک دوره آموزشی به منذله پذیرفتن تمام قوانین و مقررات دانشجویار میباشد. پذیرفتن و داشتن آگاهی از قوانین، لازمه استفاده کاربران از خدمات و محصولات وبسایت دانشجویار خواهد بود\n"
+"کاربران ملزم به وارد کردن اطلاعات هویتی واقعی خود در هنگام ثبت نام میباشند. هرگونه تخطی در این مورد، هیچ مسئولیتی برای دانشجویار ایجاد نکرده و مسئولیت آن کاملا بر عهده کاربر خواهد بود. لازم به ذکر است که دانشجویار این اطلاعات را در اختیار هیچ نهاد یا شخص ثالثی قرار نخواهد داد.\n"
+"چنانچه یک حساب کاربری جعلی و با اطلاعات ناشایست در وبسایت رویت شود، دانشجویار قادر به حذف آن حساب کاربری خواهد بود و هیچ هزینه ای برای دوره های آن حساب کاربری بازگشت داده نمیشود.\n"
+"هر حساب کاربری متعلق به یک شخص حقیقی یا حقوقی میباشد. کاربران بایستی از اطلاعات ورود به حساب کاربری خود محافظت کرده و آن را در اختیار کسی قرار ندهند.\n"
+"استفاده همزمان چند شخص از یک حساب کاربری، قابل پیگیری و شکایت از طرف دانشجویار میباشد. البته اگر این امر پیش از این توسط مدیر بخش آموزش در دانشجویار تایید شده باشد، مشکلی برای آن حساب کاربری تایید شده پیش نخواهد آمد.\n"
+"کاربران موظف هستند که از تمام محصولات آموزشی وبسایت دانشجویار به صورت شخصی و انفرادی استفاده کنند. پس هیچ کاربری اجازه انتشار محتواهای خریداری کرده از دانشجویار را در سایر پلتفرم های اجتماعی یا وبسایت های اینترنتی نخواهد داشت.\n"
+    </string>
 </resources>
